--- a/sis/package.json
+++ b/sis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-node",
+  "name": "template-node-beta",
   "version": "0.0.1",
   "description": "sis CLI",
   "private": false,
